refactor biulds and runsbut calls to eandb returning 500